@@ -130,6 +130,10 @@ Features:
   'msg_header_property' we can do this easily. Setting the
   'msg_header_property' to the empty string '' (not to None) will
   suppress the header for that property. (John Rouillard)
+- issue2550891: Allow subdir in template value. Anthony (antmail)
+  requested the ability to put templates into subdirectories. So
+  the issue class can accept @template=issues/item to get the
+  html/issues/issue.item.html template. See ``doc/upgrading.txt``.
 
 Fixed:
 
